--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,8 @@ body {
   }
   div, section {
     overflow-wrap: break-word;
+    word-wrap: break-word;
+    white-space: normal;  /* Ensures text wraps to the next line */
   }
     a {
         color: rgb(36, 43, 56); /* dark gray text */
@@ -129,23 +131,6 @@ body {
         display: flex; /* flex display */
         flex-wrap: wrap; /* wrap items */
         margin: 0 -1rem; /* negative margin */
-    }
-    .col {
-        flex: 1; /* flex 1 */
-        padding: 1rem; /* 1rem padding */
-        box-sizing: border-box; /* box sizing */
-    }
-    .col-1 {
-        flex: 0 0 8.33%; /* 8.33% width */
-    }
-    .col-2 {
-        flex: 0 0 16.66%; /* 16.66% width */
-    }
-    .col-3 {
-        flex: 0 0 25%; /* 25% width */
-    }
-    .col-4 {
-        flex: 0 0 33.33%; /* 33.33% width */
     }
 #back-to-top {
         position: fixed;
