--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-@tailwind base;
-@tailwind components;
+@import "tailwindcss/preflight";
+@tailwind utilities;
 @tailwind utilities;
 
 body {
@@ -152,6 +152,8 @@ textarea {
   height: 80px;
   width: 20%;
   padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .container {
